fixed typo in a word

--- a/source/pug/pages/404.pug
+++ b/source/pug/pages/404.pug
@@ -13,6 +13,6 @@ html
             p
               | error 
               span 404
-            p Not foud
+            p Not found
             span.error-desc.text-justify You may have mis-typed the URL Or the page has been removed
     include ../partials/footer
